# FEStokes-Validator

./: .gitignore  get_available_applications  index.html  pyproject.toml
.github/workflows/: deploy.yml
assets/: AdminPage-DP1x_Yat.js  AppComponent-tLuoTCbd.js  AppComponent.vue_vue_type_script_setup_true_lang-hGkFpWjh.js  AppDevelopmentComponent-DLh-dZai.js  AppPage-BZNwRLxr.js  AppsPage-C3zUfV8i.js  BackupsComponent-DaLOcRUV.js  ButtonWithTooltip.vue_vue_type_script_setup_true_lang-CfpiiSmt.js  DateComponent.vue_vue_type_script_setup_true_lang-VxAOPIWW.js  DevAppPage-6J-SPg_z.js  ErrorNotFound-CMuEL6yC.js  ITribomatDatabasePage-MB4ZR-8c.js  IfAccess.vue_vue_type_script_setup_true_lang-D-lyuO6c.js  IndexPage-CIdNpiIL.js  LocalAppPage-DS5LJl9-.js  MainLayout-BZXdUiWX.js  NavigationComponent.vue_vue_type_script_setup_true_lang-Dnc8W5fn.js  QChip-DfAmTDj2.js  QForm-pb3osLqH.js  QImg-CUniUMnx.js  QInnerLoading-D5d2YlFd.js  QItem-CUH0VRAR.js  QItemLabel-B4I_xvlo.js  QItemSection-BctlzkCQ.js  QLayout-CYk0_eoz.js  QList-BLLsYyRt.js  QPage-DUyEmioh.js  QResizeObserver-BYYhuyNQ.js  QSpace-BeVld3_M.js  QTable-C8ItjvUd.js  ServerComponent-Comhm897.js  SettingsComponent-DgG3mOfo.js  StandaloneAppsPage-DZHT0C3f.js  StandaloneLayout-lqvF-_3E.js  StandalonePage-CP69QT6Y.js  UserManagement-DVHjovaO.js  UserPage-DseEVbOb.js  api-Bjm2gL7I.js  apps-Byzj_U6I.js  auth-D_swXBC6.js  (+23 more)
python_modules/: festokes_repair  webapp_client
src/festokes_repair/: app.py  appconfig.py
src/festokes_repair/assets_highres/: convert.sh
