[build-system]
requires = [ "setuptools>=60", "wheel", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "festokes_repair"
dynamic = ["version"]
dependencies = ["ngsolve", "plotly"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "festokes_repair.__version__"}

